--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,36 +1,45 @@
-name: Deploy React App to Windows 11
+name: CI/CD Pipeline for React App
 
+# Trigger this workflow on push or pull request to the main branch
 on:
   push:
     branches:
-      - main # Deploy on push to the main branch
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
-    runs-on: self-hosted # Use self-hosted runner (Windows machine)
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      # Step 1: Checkout the code
+      - name: Checkout code
+        uses: actions/checkout@v3
 
+      # Step 2: Set up Node.js
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: "16" # Specify Node.js version
+          node-version: '18'  # Specify the Node.js version
 
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: npm install
 
-      - name: Run Tests
-        run: npm test -- --watchAll=false # Run tests without watch mode
+      # Step 4: Run tests (optional, skip if you don't have tests yet)
+      - name: Run tests
+        run: npm test -- --watchAll=false
 
+      # Step 5: Build the React app
       - name: Build the app
         run: npm run build
 
-      - name: Deploy to Local Server
-        run: |
-          # Ensure the destination directory exists, if not, create it
-          if not exist "D:\ReactApp\" mkdir "D:\ReactApp\"
-          
-          # Copy the build files to your server's root directory
-          xcopy /E /I /Y build\* "D:\ReactApp\"
+      # Step 6: Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
+
