--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://github.com/hemildesai0910/TodoReactAppCICD.git",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -36,10 +37,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
-    "gh-pages": "^6.1.1",
-    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
+    "gh-pages": "^6.1.1"
   },
   "babel": {
     "presets": [
