--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://github.com/hemildesai0910/TodoReactAppCICD.git",
+  "homepage": "https://hemildesai0910.github.io/TodoReactAppCICD",  // Corrected this line
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
